--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-inject": "^1.3.1",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-ng-templates": "0.0.6",
     "gulp-rename": "^1.2.2",
