--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-zl",
-  "version": "0.1.0",
-  "homepage": "https://github.com/zlfe/ng.zl",
+  "version": "0.2.0",
+  "homepage": "https://github.com/zlfe/ng-zl",
   "authors": [
     "yatang.li <yatang.li@zuolin.com>"
   ],
