--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "underscore": "~1.8.3",
     "jquery": "~2.1.4",
     "angular-sanitize": "~1.4.0",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular": "1.4.0"
   }
 }
