--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,12 @@
     "tests"
   ],
   "devDependencies": {
-    "angular-material": "~0.9.6",
     "fontawesome": "~4.3.0",
     "underscore": "~1.8.3",
     "jquery": "~2.1.4",
     "angular-sanitize": "~1.4.0",
     "bootstrap": "~3.3.5",
-    "angular": "1.4.0"
+    "angular": "1.4.0",
+    "angular-material": "0.9.6"
   }
 }
